# Nimble-Snapshots

## 0.1

* Updated to official repos of Quick and Nimble for beta 5 support – @ashfurrow 