@@ -1,5 +1,7 @@
 # Nimble-Snapshots
 
+* Ensure all ReferenceImages folders are in the same root folder - @orta
+
 ## 0.1
 
-* Updated to official repos of Quick and Nimble for beta 5 support – @ashfurrow 
+* Updated to official repos of Quick and Nimble for beta 5 support – @ashfurrow
